# Modusnap_PulseBar

./: README.md  __init__.py  pyproject.toml  requirements.txt
server/: collector.py  routes.py
server/providers/: __init__.py  amd_rocm.py  amd_windows.py  apple.py  base.py  cpu.py  disk.py  intel.py  nvidia.py  windows.py
web/: settings.js  statbar.css  statbar.js  statbar.py
