[project]
name = "modusnap-pulsebar"
version = "1.0.0"
description = "Universal live hardware and generation monitoring bar for ComfyUI."
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "pynvml>=11.5; sys_platform != 'darwin'",
    "pyadl; sys_platform == 'win32'",
    "WMI; sys_platform == 'win32'"
]

classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Intel Arc",
    "Environment :: GPU :: Apple Metal"
]

[project.urls]
Repository = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar"
Documentation = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar#readme"
"Bug Tracker" = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar/issues"

[tool.comfy]
PublisherId = "MTheUnexpected-1"
DisplayName = "ModuSnap PulseBar"
