[project]
name = "modusnap-pulsebar"
version = "1.0.1"
description = "Universal live hardware and generation monitoring bar for ComfyUI."
requires-python = ">=3.10"
license = { text = "MIT License" }

dependencies = [
    "psutil>=5.9",
    "pynvml>=11.5; sys_platform != 'darwin'",
    "pyadl; sys_platform == 'win32'",
    "WMI; sys_platform == 'win32'"
]

classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar"
Documentation = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar#readme"
"Bug Tracker" = "https://github.com/MTheUnexpected-1/Modusnap_PulseBar/issues"

[tool.comfy]
PublisherId = "mtheunexpected"
DisplayName = "ModuSnap PulseBar"